--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,23 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.task-containers-wrapper{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  padding-left: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.add-container-btn{
+  align-self: flex-end;
+  border-radius: 20px;
+  height: 32px;
+  width: 30px;
+  font-size: 20px;
+  margin: 5px 0 10px 10px;
+  border: none;
+  background-color: dodgerblue;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-container-btn:focus{
+  outline:0;
+}
+.add-container-btn:hover{
+  background-color: rgb(88, 171, 255);
+  cursor: pointer;
 }
