--- a/src/Components/TaskContainer/TasksContainer.css
+++ b/src/Components/TaskContainer/TasksContainer.css
@@ -5,15 +5,17 @@
 }
 .tasks-container{
   width: 100%;
-  padding: 5px 5px;
+  padding: 0px 0px;
+  border-radius: 5px;
   border: 1px solid darkgray;
+  background-color: lightgray
 }
 .add-task-btn{
-  align-self: top;
   width: 100%;
-  font-size: 22px;
+  font-size: 16px;
   border: none;
   background-color: dodgerblue;
+  border-radius: 5px;
 }
 .add-task-btn:focus{
   outline: 0;
@@ -22,7 +24,13 @@
   background-color: rgb(88, 171, 255);
   cursor: pointer;
 }
-h3{
+.tasks-container-title{
   text-align: center;
-  background-color: aquamarine;
+  background-color: rgb(233, 233, 233);
+  font-size: 22px;
+  font-weight: bold;
+  border-radius: 5px;
+}
+.task-list{
+  padding: 0px 5px 5px 5px;
 }
