--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,13 @@ body{
   padding: 30px 0px 10px 10px;
 }
 .task-containers-wrapper{
+  flex: 1;
   display: flex;
-  flex-direction: row;
-  padding-left: 0px;
+  overflow: auto;
+}
+.scrollable-wrap{
+  min-height: -webkit-min-content;
+  display: flex;
 }
 .add-container-btn{
   align-self: flex-end;
