--- a/src/Components/TaskContainer/TasksContainer.css
+++ b/src/Components/TaskContainer/TasksContainer.css
@@ -1,5 +1,5 @@
 .tasks-container-with-modal{
-  width: 30%;
+  width: 300px;
   margin-right: 15px;
   
 }
@@ -33,4 +33,24 @@
 }
 .task-list{
   padding: 0px 5px 5px 5px;
+}
+
+@media(max-width: 768px){
+  .tasks-container-with-modal{
+    width: 200px;
+    margin-right: 7px;
+  }
+  .tasks-container-title{
+    font-size: 16px;
+  }
+  .add-task-btn{
+    font-size: 12px;
+  }
+}
+@media(max-width: 425px){
+  .tasks-container-with-modal{
+    width: 100px;
+    margin-right: 5px;
+    
+  }
 }
